<resources>
    <string name="app_name">All Kotlin Demo</string>
    <string name="description">Lorem ipsum dolor sit amet,consectetur adipiscing elit.Etiam efficitur ipsum in placerat molestie.Fusce quis mauris a enim sollicitudin.\n\n
    Lorem ipsum dolor sit amet,consectetur adipiscing elit.Etiam efficitur ipsum in placerat molestie.Fusce quis mauris a enim sollicitudin.</string>
    <string name="address">Terry M Smith\n(904) 246-1297\n207 Cherry St,Neptune Beach,FL,32266</string>
    <string name="embie_design_header">Hi Ravid, Today you\'re on day 10 of ovarian stimulation for your IVF/ICSI Cycle!</string>
    <string name="text_home">Home</string>
    <string name="text_calender">Calender</string>
    <string name="text_notifications">notification</string>
    <string name="text_light">Bulb</string>
    <string name="Spinner_Des">GONAL-f contains a medicine called “follitropin alfa”. Follitropinalfa is a type of “Follicle Stimulating Hormone” (FSH) which
        belongs to the family of hormones called “gonadotropins”. Gonadotropins are involved in reproduction and fertility.\n\n

        In adult women, GONAL-f is used to help release an egg from the ovary (ovulation) in women that cannot ovulate and that did not respond to treatment
        with a medicine called “clomiphene citrate”. Gonal-F is used to treat infertility in women who cannot ovulate. Gonal-F is not effective in women with
        primary ovarian failure (when the ovaries are unable to produce an egg).\n\n

        Gonal-f together with another medicine called “lutropin alfa” (“Luteinising Hormone” or LH) helps release egg from the ovary (ovulation) in women that are
        not ovulating because their body is producing very little gonadotropins (FSH and LH).•\n\n

        It also helps develop several follicles (each containing an egg) in women undergoing assisted reproductive technology procedures
        (procedures that may help you to become pregnant) such as “in vitrofertilisation”, “gamete intra-fallopian
        transfer” or “zygote intra-fallopian transfer”.\n</string>
    <string name="MoreInfo_Des">BY ADDING THIS MEDICATION, YOU AGREE THAT IT WAS  PRESCRIBED BY YOUR DR OR THAT THE SUPPLEMENT OR HERB WAS RUN BY YOUR CLINIC.
        YOUR MEDICATIONS CAN BE UPDATED AT ANY TIME BY CLICKING THE EDIT BUTTON. IF YOU HAVE ANY QUESTIONS REGARDING YOUR MEDICATION OR DOSAGE, PLEASE REFER
        TO YOUR DR., CLINIC OR PHARMACIST.  Some of the information here is provided by Drugs.com\n</string>
    <string name="Description">
        Premium includes\n
         <li>Detailed medication uses, videos and expected symptoms</li>\n
         <li>Insights into your treatment cycle in real time.</li>\n
         <li>Alerts, when something looks \'off\'</li>\n
         <li>Tailored to you recommendations by diagnosis, protocol type, etc.</li>\n
         <li>Access to hundreds of resources, videos &amp; more\n</li></string>
    <string name="Disclaimer_Des">Information provided from drugs.com and xyz manufacturer. You may download the manufacturer pamphlet by clicking here.</string>
    <string name="data_base">DataBase</string>
    <string name="app_Number">8460121117</string>
    <string name="app_Number_bracket">(Mo. 8460121117)</string>
    <string name="action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="action_done">Done</string>
    <string name="error_image_not_exist">Image error</string>
    <string name="error_no_permission">Has no permission</string>
    <string name="folder_all">All Images</string>
    <string name="msg_amount_limit">Select images amount is limit</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="permission_dialog_cancel">CANCEL</string>
    <string name="permission_dialog_ok">OK</string>
    <string name="permission_dialog_title">Permission Deny</string>
    <string name="permission_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_rationale_write_storage">Storage write permission is needed to save the image.</string>
    <string name="photo_unit">Shot</string>
    <string name="preview">Preview</string>
    <string name="tip_take_photo">Take photo</string>
    <string name="title_activity_new_tutorial">NewTutorial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="customers">Customer</string>
    <string name="billing">Invoice</string>
    <string name="deposit">Deposit</string>
    <string name="credit">Credit</string>
    <string name="complete">Complete</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior" translatable="false">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern" translatable="false">%1$d / %2$d</string>
    <string name="accounts">Account</string>
    <string name="stock">Product</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="share_image">Share Image</string>
    <string name="share_data">Share Data</string>
    <string name="all_transaction">All Transactions</string>
    <string name="back_up">Back Up</string>
    <string name="restore">Restore Back Up</string>
    <string name="daily_schedule">Daily Schedule</string>
    <string name="pay_now">Pay Now</string>
    <string name="pay_later">Pay Later</string>
    <string name="no_data_available">No Data Available</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="productName">Product Name</string>
    <string name="ProductQuantity">Product Quantity</string>
    <string name="ProductPrice">Product Price</string>
    <string name="productTax">Product Tax</string>
    <string name="currency_india">₹</string>
    <string name="spaced_currency_india"> ₹</string>
    <string name="add_product">Add Product</string>
    <string name="taxes">Taxes</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="addition_info">Additional info</string>
    <string name="collect">Collect</string>
    <string name="amount_to">Amount to</string>
    <string name="customer_name">Customer Name</string>
    <string name="schedule_time">Schedule Time</string>
    <string name="schedule_date">Schedule Date</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_payment">Add Payment</string>
    <string name="product_total">Product Total</string>
    <string name="product_discount">Product Discount</string>
    <string name="sub_total">Sub Total</string>
    <string name="grand_total">Grand Total</string>
    <string name="invoice_disc">Invoice Discount</string>
    <string name="shipping_charge">Shipping Charge</string>
    <string name="discount">Discount</string>
    <string name="tax">GST</string>
    <string name="invoice_total">Invoice Total</string>
    <string name="invoice_discount">Invoice Discount</string>
    <string name="invoice_sub_total">Invoice Sub Total</string>
    <string name="invoice_paid">Invoice Paid</string>
    <string name="invoice_due">Invoice Due</string>
    <string name="remainder">Remainder</string>
    <string name="editProfile">Edit Profile</string>
    <string name="shareData">Share Data</string>
    <string name="createInvoice">Create Invoice</string>
    <string name="charge">Charge</string>
    <string name="payment">Payment</string>
    <string name="new_payment">New Payment</string>
    <string name="customerDetails">Customer Details</string>
    <string name="editprofile">Edit Product</string>
    <string name="more">More</string>
    <string name="add_remainder">Add Remainder</string>
    <string name="invoice">Invoice</string>
    <string name="expiry_date">Expiry Date :</string>
    <string name="_19_june_2016">19 June, 2016</string>
    <string name="edit_card_details">Edit Card Details</string>
    <string name="sopari">Sopari</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="gst_on_sub_total">GST on Sub Total</string>
    <string name="qnty_505_00_kg"><![CDATA[Qnty. --> 505.00 KG]]></string>
    <string name="gst_5"><![CDATA[GST --> 5%]]></string>
    <string name="price_304_00"><![CDATA[Price --> $ 304.00]]></string>
    <string name="keval">Keval</string>
    <string name="_03_11_2017">03-11-2017</string>
    <string name="total_products_2"><![CDATA[Total Products --> 2]]></string>
    <string name="invoice_no_1"><![CDATA[Invoice No. --> 1]]></string>
    <string name="complete_transaction">Complete Transaction</string>
    <string name="final_total">Final Total</string>
    <string name="payment_no_1">Payment No. 1</string>
    <string name="payment_status">Payment Status</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="_0">0</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_customer_number">Enter Customer Number</string>
    <string name="enter_customer_email">Enter Customer Email</string>
    <string name="enter_gstn">Enter GSTN</string>
    <string name="enter_invoice_address">Enter Invoice Address</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_city_pincode">Enter City Pincode</string>
    <string name="enter_country">Enter Country</string>
    <string name="ship_to_different_address">Ship to Different Address</string>
    <string name="enter_shipping_address">Enter Shipping Address</string>
    <string name="enter_shipping_city">Enter Shipping City</string>
    <string name="enter_shipping_state">Enter Shipping State</string>
    <string name="enter_shipping_city_pincode">Enter Shipping City Pincode</string>
    <string name="enter_shipping_country">Enter Shipping Country</string>
    <string name="submit">Submit</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="keval_cholera">Keval Cholera</string>
    <string name="dineshchandra_amp_co"><![CDATA[DineshChandra & Co.]]></string>
    <string name="forgotPasswordBtnSendEmail">Send Email</string>
    <string name="forgotPasswordHeading">Forgot your password</string>
    <string name="forgotPasswordSubHeading">Type in your email below to reset  your password</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_heading">Welcome!</string>
    <string name="welcome_or">OR</string>
    <string name="welcome_already_account">Already have a  <a href="https://google.com">Trail Blazer</a> account?</string>
    <string name="welcome_description">The people who choose  to spend time  outdoors are not running away from anything; we are returing  to where we belong,</string>
    <string name="register_email">E MAIL</string>
    <string name="register_mobile_number">MOBILE NUMBER</string>
    <string name="register_first_name">FIRST NAME</string>
    <string name="register_last_name">LAST NAME</string>
    <string name="register_password">PASSWORD</string>
    <string name="register_confirm_password">CONFIRM PASSWORD</string>
    <string name="terms_condition">I agree the Terms and Condition</string>
    <string name="signin_email">E-MAIL</string>
    <string name="signin_password">PASSWORD</string>
    <string name="signin_resend_email">Resend Verification E-mail</string>
    <string name="signin_forgot_password">Forgot Password</string>
    <string name="signin_need_help">Need Help?</string>
</resources>