<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clIncludeRegisterContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/tvRegisterEmail"
        style="@style/emerald_rect_edittext_style"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:maxLength="40"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvRegisterMobileNumber"
        style="@style/emerald_rect_edittext_style"
        android:hint="@string/register_mobile_number"
        android:inputType="phone"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterEmail" />

    <EditText
        android:id="@+id/tvRegisterFirstName"
        style="@style/emerald_rect_edittext_style"
        android:hint="@string/register_first_name"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterMobileNumber" />

    <EditText
        android:id="@+id/tvRegisterLastName"
        style="@style/emerald_rect_edittext_style"
        android:hint="@string/register_last_name"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterFirstName" />

    <EditText
        android:id="@+id/tvRegisterPassword"
        style="@style/emerald_rect_edittext_style"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterLastName" />

    <EditText
        android:id="@+id/tvRegisterConFirmPassword"
        style="@style/emerald_rect_edittext_style"
        android:hint="@string/register_confirm_password"
        android:inputType="textPassword"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterPassword" />

    <CheckBox
        android:id="@+id/cbRegisterTermsCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:button="@drawable/emarald_checkbox_background"
        android:checked="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterConFirmPassword" />

    <TextView
        android:id="@+id/tvRegisterCbText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_regular"
        tools:text="@string/terms_condition"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cbRegisterTermsCondition"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterConFirmPassword" />

    <ImageView
        android:id="@+id/ivRegisterButtonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterCbText"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>