<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.main.kotlin.fragmentwithbottomnavigation.ui.home.list.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.main.kotlin.fragmentwithbottomnavigation.ui.favorite.FavoriteFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_favorite" />


    <fragment
        android:id="@+id/navigation_recently_added"
        android:name="com.main.kotlin.fragmentwithbottomnavigation.ui.recentlyadded.RecentlyAddedFragment"
        android:label="Recently Added"
        tools:layout="@layout/fragment_recently_added" />


    <fragment
        android:id="@+id/navigation_download"
        android:name="com.main.kotlin.fragmentwithbottomnavigation.ui.download.DownloadFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_download" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.main.kotlin.fragmentwithbottomnavigation.ui.setting.SettingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_setting" />


</navigation>