<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_emerald_background"
    tools:context=".emeraldtrail.welcome.WelcomePageActivity">


    <ImageView
        android:id="@+id/ivWelcomeLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_emeraldtrail_logo"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvWelcomeHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/welcome_heading"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/ivWelcomeLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivWelcomeRegister"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_registerandmap_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvWelcomeOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:text="@string/welcome_or"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintBottom_toTopOf="@id/ivWelcomeRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivWelcomeSignIn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:scaleType="fitXY"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/ic_signin_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvWelcomeOr"/>

    <TextView
        android:id="@+id/tvWelcomeTrailBlazerAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_already_account"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/poppins_bold"
        android:textColorLink="@color/white"
        android:autoLink="web"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/ivWelcomeSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <TextView
        android:id="@+id/tvWelcomeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_description"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>