<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:fillViewport="true"
    tools:context=".icst.forgotpassword.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivForgotPasswordLogo"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toTopOf="@id/tvForgotPasswordHeading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvForgotPasswordHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/forgotPasswordHeading"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@id/tvForgotPasswordSubHeading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivForgotPasswordLogo" />

        <TextView
            android:id="@+id/tvForgotPasswordSubHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center"
            android:text="@string/forgotPasswordSubHeading"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@id/etForgotPasswordEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordHeading" />

        <EditText
            android:id="@+id/etForgotPasswordEmail"
            style="@style/commonEditText"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/open_sans_regular"
            android:hint="Email"
            app:layout_constraintBottom_toTopOf="@id/btnForgotPasswordSendEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordSubHeading" />


        <TextView
            android:id="@+id/btnForgotPasswordSendEmail"
            style="@style/CommonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/forgotPasswordBtnSendEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etForgotPasswordEmail" />

        <ImageView
            android:id="@+id/ivForgotPasswordBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>